Update dependency org.seleniumhq.selenium:selenium-bom to v4.17.0 (#322)
* Update dependency org.seleniumhq.selenium:selenium-bom to v4.17.0

* [Core] Use Selenium Server 4.17.0

* Java 17 features

* Updated format

* Added default